--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">CityLiker Beta</string>
-    <string name="search_title">Search</string>
+    <string name="search_title">Поиск</string>
+    <string name="menu_navigation_1">Главная</string>
+    <string name="menu_navigation_2">Новости</string>
+    <string name="menu_navigation_3">Голосование</string>
+    <string name="menu_navigation_4">Мой кабинет</string>
+    <string name="menu_navigation_5">Рейтинг городов</string>
 </resources>
