--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="menu_navigation_3">Голосование</string>
     <string name="menu_navigation_4">Мой кабинет</string>
     <string name="menu_navigation_5">Рейтинг городов</string>
+    <string name="fragment_first_text">Привет фрагмент</string>
 </resources>
